--- a/teste.html
+++ b/teste.html
@@ -21,7 +21,7 @@
       sexto semestre de Ciências de Computação.Tenho um grande interesse por
       tecnologia e inovação,<br> e estou sempre buscando aprender mais sobre
       desenvolvimento de software. <br> Além dos estudos, gosto de praticar esportes
-      ao ar livre e explorar novas trilhas na natureza."
+      ao ar livre e escutar rock n roll."
     </p>
     <h3>Formação Acadêmica</h3>
     <ul>
@@ -38,6 +38,17 @@
 <h4><strong>Área de interesse</strong></h4>
 <p> <li>back end: C, C++ e Java</li></p>
 <p> <li>banco de dados: SQL </li></p>
+
+<footer>
+  <h3>Links úteis</h3>
+  <a href="https://github.com/guilhermeolivmoraes-bit/desenvolvimento-web" target="_blank">
+    Repositório no GitHub
+  </a>
+  <br />
+  <a href="https://www.youtube.com/watch?v=-R5XnrZn47Q" target="_blank">
+    In To The Void - Black Sabbath
+  </a>
+</footer>
 
 </body>
 </html>
