Update página pessoal simples.html

--- a/página pessoal simples.html
+++ b/página pessoal simples.html
@@ -18,20 +18,23 @@
 
     <img src="imagem.jpg" alt="Foto de Guilherme Oliveira Moraes" width="250" />
 
-    <h1>Apresentação</h1>
-    <p>
-      Olá, meu nome é <strong>Guilherme Oliveira Moraes</strong>, tenho 31 anos e sou estudante
-      universitário na Universidade Estadual de Mato Grosso. <br>
-      Estou cursando o sexto semestre de Ciências da Computação. Tenho um grande interesse por
-      tecnologia e inovação, e estou sempre buscando aprender mais sobre
-      desenvolvimento de software. <br>
-      Além dos estudos, gosto de praticar esportes ao ar livre e escutar rock n' roll.
-    </p>
+    <!-- 🔹 Seção de Apresentação -->
+    <section id="apresentacao">
+      <h1>Apresentação</h1>
+      <p>
+        Olá, meu nome é <strong>Guilherme Oliveira Moraes</strong>, tenho 31 anos e sou estudante
+        universitário na Universidade Estadual de Mato Grosso. <br>
+        Estou cursando o sexto semestre de Ciências da Computação. Tenho um grande interesse por
+        tecnologia e inovação, e estou sempre buscando aprender mais sobre
+        desenvolvimento de software. <br>
+        Além dos estudos, gosto de praticar esportes ao ar livre e escutar rock n' roll.
+      </p>
+    </section>
 
     <h3>Formação Acadêmica</h3>
     <ul>
       <li>Ensino Médio Completo - Escola Estadual de Mato Grosso (2012)</li>
-      <li>Cursando Bacharelado em Ciências da Computação - Universidade Estadual de Mato Grosso (2023 - Presente)</li>
+      <li>Cursando Bacharelado em Ciências da Computação - Universidade Estadual de Mato Grosso (2021 - Presente)</li>
       <li>Curso de Direito - Unifimes (2017)</li>
     </ul>
 
